# gpt

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README.md  README.setup.md  TODO  bootstrap.sh  codecov.yml  configure.ac  pyproject.toml  setup.cfg  setup.py
lib/: Makefile.am
lib/cgpt/: Makefile.am  cgpt.cc  clean  convert.h  delete.h  grid.h  init.h  make  make.qcdonly  make.summit  update
lib/cgpt/lib/: allocator.h  basis.cc  basis_size.h  benchmarks.cc  benchmarks.h  blas.cc  blas.h  block.cc  block.h  cached.h  checksums.h  coarse.cc  convert.h  coordinates.cc  coordinates.h  copy.cc  copy.h  distribute.cc  distribute.h  eval.cc  exception.h  exports.h  expression.cc  expression.h  expression_gammamul.cc  expression_linear_combination.cc  expression_mul.cc  foundation.h  fp16.cc  fp16.h  grid.cc  grid.h  gversions.cc  gversions.h  init.cc  init.h  instantiate.h  instantiate_expression_gammamul_double_0.cc  instantiate_expression_gammamul_double_1.cc  instantiate_expression_gammamul_double_2.cc  (+66 more)
lib/cgpt/lib/blas/: accumulate.h  contract.h  det.h  gemm.h  indexed_sum.h  inv.h  transpose.h
lib/cgpt/lib/checksums/: crc32.h  nersc.h  sha256.h
lib/cgpt/lib/distribute/: bcopy.h  global_memory_transfer.h  global_transfer.h  view.h
lib/cgpt/lib/eval/: matmul_vlat.h  mul_vlat_vlat.h
lib/cgpt/lib/expression/: access.h  eval.h  gammamul.h  implementation.h  linear_combination.h  linear_combination_implementation.h  macros.h  matmul.h  mul.h  mul_implementation.h  multiplication_table.h  singlet.h  unary.h  unary_implementation.h
lib/cgpt/lib/foundation/: access.h  basis.h  binary.h  block.h  block_core.h  block_lookup_table.h  clover.h  coarse.h  eigen.h  et.h  general_local_stencil.h  grid.h  laplacian.h  matrix.h  mobius_with_vector_field.h  reduce.h  reduce_gpu.h  singlet.h  table.h  ternary.h  transfer.h  transform.h  unary.h
lib/cgpt/lib/instantiate/: expression_gammamul_double_0.cc  expression_gammamul_double_1.cc  expression_gammamul_double_2.cc  expression_gammamul_single_0.cc  expression_gammamul_single_1.cc  expression_gammamul_single_2.cc  expression_linear_combination_double_0.cc  expression_linear_combination_double_1.cc  expression_linear_combination_double_2.cc  expression_linear_combination_double_iMColor1.cc  expression_linear_combination_double_iMColor2.cc  expression_linear_combination_double_iMColor3.cc  expression_linear_combination_double_iMColor8.cc  expression_linear_combination_double_iMSinglet10.cc  expression_linear_combination_double_iMSinglet30.cc  expression_linear_combination_double_iMSinglet4.cc  expression_linear_combination_double_iMSinglet5.cc  expression_linear_combination_double_iMSinglet60.cc  expression_linear_combination_double_iMSpin4.cc  expression_linear_combination_double_iMSpin4Color1.cc  expression_linear_combination_double_iMSpin4Color2.cc  expression_linear_combination_double_iMSpin4Color3.cc  expression_linear_combination_double_iMSpin4Color8.cc  expression_linear_combination_double_iSinglet.cc  expression_linear_combination_double_iVColor1.cc  expression_linear_combination_double_iVColor2.cc  expression_linear_combination_double_iVColor3.cc  expression_linear_combination_double_iVColor8.cc  expression_linear_combination_double_iVSinglet10.cc  expression_linear_combination_double_iVSinglet30.cc  expression_linear_combination_double_iVSinglet4.cc  expression_linear_combination_double_iVSinglet5.cc  expression_linear_combination_double_iVSinglet60.cc  expression_linear_combination_double_iVSpin4.cc  expression_linear_combination_double_iVSpin4Color1.cc  (+164 more)
lib/cgpt/logs/: expression_linear_combination_single_iMColor1.err  expression_linear_combination_single_iMColor2.err  expression_linear_combination_single_iMColor3.err  expression_linear_combination_single_iMSinglet10.err  expression_linear_combination_single_iMSinglet4.err  expression_linear_combination_single_iMSpin4.err  expression_linear_combination_single_iMSpin4Color1.err  expression_linear_combination_single_iMSpin4Color2.err  expression_linear_combination_single_iMSpin4Color3.err  expression_linear_combination_single_iSinglet.err  expression_linear_combination_single_iVColor1.err  expression_linear_combination_single_iVColor2.err  expression_linear_combination_single_iVColor3.err  expression_linear_combination_single_iVSinglet10.err  expression_linear_combination_single_iVSinglet4.err  expression_linear_combination_single_iVSpin4.err  expression_linear_combination_single_iVSpin4Color1.err  expression_linear_combination_single_iVSpin4Color2.err  expression_linear_combination_single_iVSpin4Color3.err  expression_mul_single_iMColor1.err  expression_mul_single_iMSpin4Color1.err  expression_mul_single_iSinglet.err  operators.err
lib/gpt/: Makefile.am  __init__.py  __main__.py  default.py  expr.py  expr_linear_combination.py  grid.py  io.py  lattice.py  log.py  operators.py  otype.py  params.py  precision.py  repository.py  signals.py  tensor.py  terminal.py  transform.py
lib/gpt/ad/: __init__.py
lib/gpt/algorithms/: __init__.py  base.py
lib/gpt/core/: __init__.py  accelerator_buffer.py  advise.py  auto_tune.py  basis.py  blas.py  block.py  buffer_manager.py  cartesian.py  checkerboard.py  checkpointer.py  colormatr.py  compiler.py  component.py  contract_plan.py  convert.py  coordinates.py  copy.py  copy_plan.py  covariant.py  cshift_plan.py  einsum.py  epsilon.py  expr.py  fingerprint.py  gamma.py  global_sum.py  grid.py  group.py  io.py  lattice.py  log.py  lookup_table.py  matrix.py  mem.py  merge.py  mpi.py  operators.py  otype.py  pack.py  (+18 more)
lib/gpt/create/: __init__.py  loops.py  smear.py  sparse_grid.py  wall.py
lib/gpt/jobs/: __init__.py
lib/gpt/ml/: __init__.py  regulator.py
lib/gpt/qcd/: __init__.py  baryon.py  baryon_contractions.py  baryon_spectrum.py  colormatr.py  create_hdf5.py  heavy_baryon_contractions.py  heavy_baryon_spectrum.py  quarkContract.py  sequential_source.py  sparse_propagator.py  spin_matrices.py  utils.py
lib/gpt/qis/: __init__.py  gate.py  map_canonical.py  state.py
lib/wrap/: __init__.py
(+800 files in other folders)
