[project]

name = "gpt"
version = "HEAD"
description = "Lattice QCD with Python and Grid"
authors = [
    "Christoph Lehner <clehner@users.sourceforge.net>"
]
license = "GPLv2"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/lehner/gpt.git"
repository = "https://github.com/lehner/gpt.git"
documentation = "https://github.com/lehner/gpt.git"

keywords = ["QCD", "Grid"]

classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[dependencies]

numpy = "^1.18"

[build-system]

requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja"]
