
# List all python files here. 
# They will be byte-compiles upon "make install"
nobase_pkgpython_PYTHON = \
	gpt/__init__.py \
	gpt/algorithms/__init__.py \
	gpt/algorithms/approx/__init__.py \
	gpt/algorithms/approx/chebyshev.py \
	gpt/algorithms/approx/deflate.py \
	gpt/algorithms/approx/evals.py \
	gpt/algorithms/iterative/__init__.py \
	gpt/algorithms/iterative/bicgstab.py \
	gpt/algorithms/iterative/cg.py \
	gpt/algorithms/iterative/fgcr.py \
	gpt/algorithms/iterative/fgmres.py \
	gpt/algorithms/iterative/irl.py \
	gpt/algorithms/iterative/mr.py \
	gpt/algorithms/iterative/power_iteration.py \
	gpt/core/__init__.py \
	gpt/core/basis.py \
	gpt/core/block/__init__.py \
	gpt/core/block/operator.py \
	gpt/core/cartesian.py \
	gpt/core/checkerboard.py \
	gpt/core/checkpointer.py \
	gpt/core/coordinates.py \
	gpt/core/expr.py \
	gpt/core/gamma.py \
	gpt/core/grid.py \
	gpt/core/io/FILE.py \
	gpt/core/io/__init__.py \
	gpt/core/io/gpt_io.py \
	gpt/core/lattice.py \
	gpt/core/log.py \
	gpt/core/mpi.py \
	gpt/core/operators.py \
	gpt/core/otype.py \
	gpt/core/precision.py \
	gpt/core/random.py \
	gpt/core/tensor.py \
	gpt/core/time.py \
	gpt/core/transform.py \
	gpt/core/util.py \
	gpt/create/__init__.py \
	gpt/default.py \
	gpt/params.py \
	gpt/qcd/__init__.py \
	gpt/qcd/fermion/__init__.py \
	gpt/qcd/fermion/operator.py \
	gpt/qcd/fermion/preconditioner/__init__.py \
	gpt/qcd/fermion/preconditioner/eo2.py \
	gpt/qcd/fermion/reference/__init__.py \
	gpt/qcd/fermion/reference/wilson.py \
	gpt/qcd/fermion/register.py \
	gpt/qcd/fermion/solver/__init__.py \
	gpt/qcd/fermion/solver/eo_ne.py \
	gpt/qcd/fermion/solver/g5m_ne.py \
	gpt/qcd/fermion/solver/propagator.py \
	gpt/qcd/gauge/__init__.py \
	gpt/qcd/utils.py
